# slovenian-python

./: Cargo.toml  LICENSE  README.md  main.py
examples/: main.spy
src/: file.rs  main.rs  test.py  test.spy  transpiler.rs
